// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popup tests disablePortal 1`] = `
<DocumentFragment>
  <div>
    <div
      aria-hidden="false"
      class="QxBackdrop css-15oh6of-QxBackdrop-root-QxBackdrop-root appear-active"
      data-component="QxBackdrop"
    >
      <div
        class="QxPopup QxPopup_x_-8 QxPopup_y_-8 css-1n8lkmp-QxPopup-root"
      >
        Popup content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Popup tests style params disableBackdrop false 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    class="QxBackdrop css-15oh6of-QxBackdrop-root-QxBackdrop-root appear-active"
    data-component="QxBackdrop"
  >
    <div
      class="QxPopup css-hgsm3k-QxPopup-root"
      data-testid="testStyleParams-disableBackdrop-false"
    >
      Статус
    </div>
  </div>
</DocumentFragment>
`;

exports[`Popup tests style params disableBackdrop true 1`] = `
<DocumentFragment>
  <div
    class="QxPopup QxPopup_disableBackdrop css-1sitpu4-QxPopup-root"
    data-testid="testStyleParams-disableBackdrop-true"
  >
    Статус
  </div>
</DocumentFragment>
`;
